--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
   <div id="container"></div>
-  <div id="info"> Paper1005 Demo <br> <a href="https://github.com/wzni/paper1005">the source code</a> </div>
+  <div id="info"> Paper1005 Demo <br> [<a href="https://github.com/wzni/paper1005">the source code</a>] </div>
 
   <script src="build/three.js"></script>
   <script src="js/loaders/GLTFLoader.js"></script>
